--- a/RS/RS_MochilaMaximizada.ipynb
+++ b/RS/RS_MochilaMaximizada.ipynb
@@ -692,7 +692,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7ZrhRq4A_WCa",
-        "outputId": "03487779-d42d-4edb-96a1-ac53c2f6e61f"
+        "outputId": "19ed0445-2fc7-4cff-c8d4-6954c2870774"
       },
       "source": [
         "if __name__ == \"__main__\":\n",
@@ -702,55 +702,56 @@
         "  if type_input == 1:\n",
         "    \n",
         "    temp_initial, temp_end, bag_capacity, value_objects, weight_objects = get_data_by_hand()\n",
+        "    M = int(input(\"Número de ejecuciones: \"))\n",
         "    \n",
         "  elif type_input == 2:\n",
         "    file_name = str(input(\"Nombre del archivo: \"))\n",
         "    M = int(input(\"Número de ejecuciones: \"))\n",
         "    temp_initial, temp_end, bag_capacity, value_objects, weight_objects = get_data_by_textfile(file_name)\n",
-        "    \n",
-        "    # ------------------------------------------PARTE 2\n",
-        "    #1. Mejor soluci ́on encontrada considerando las M ejecuciones.\n",
-        "    #2. Peor soluci ́on encontrada considerando las M ejecuciones.\n",
-        "    #3. Soluci ́on que corresponde a la mediana considerando las M ejecuciones.\n",
-        "    #4. Media del valor de la funci ́on objetivo considerando las M ejecuciones.\n",
-        "    #5. Desviaci ́on est ́andar del valor de la funci ́on objetivo considerando las M ejecuciones.\n",
-        "\n",
-        "    solutions = []\n",
-        "    media = 0\n",
-        "    stdesv = []\n",
-        "    conteo = 0\n",
-        "    #En los primeros tres puntos indica tanto el valor de x (lista de objetos y su\n",
-        "    #correspondiente cadena binaria) como el valor de las funciones f (valor de la mochila) y g (peso de la mochila).\n",
-        "    while conteo != M:\n",
-        "      objects_in_bag, binary, bag_value, bag_weight = RS(temp_initial, temp_end, bag_capacity, value_objects, weight_objects)\n",
-        "      element = (objects_in_bag, binary, bag_value, bag_weight)\n",
-        "     \n",
-        "      media += bag_value\n",
-        "      stdesv.append(bag_value)\n",
-        "      \n",
-        "      solutions.append(element)\n",
-        "      conteo += 1\n",
-        "    \n",
-        "    # Ordenamos de manera ascendente en base al costo de recorrido de la solución\n",
-        "    solutions = sorted(solutions, key=lambda value: value[2]) \n",
-        "    #print(solutions)\n",
-        "    #print(f\"Mejor solución: {min(solutions)} \")#{better_way}, {better_weight}\")\n",
-        "    print(f\"\\nMejor solución: {solutions[-1]}\")\n",
-        "    #print(f\"Peor solución: {max(solutions)}\")#{poor_way}, {poor_weight}\")\n",
-        "    print(f\"Peor solución: {solutions[0]}\")\n",
-        "    # Se supone que cuando es un número impar, se hace un promedio de los dos \n",
-        "    # del centro pero ¿cóómo haces eso con listas? .-. \n",
-        "    # Es por ello que lo he puesto así\n",
-        "    print(f\"Mediana ejecuciones: {solutions[int(len(solutions)/2)]}\")\n",
-        "    #print(f\"Media: {media/len(solutions)}\")\n",
-        "    print(f\"Media: {media/M}\")\n",
-        "    print(f\"Desviación estandar: {std(stdesv)}\")\n",
         "  \n",
         "  else:\n",
-        "    print(\"Opción no valida\")\n",
-        "  #print(f\"->Búsqueda tabú: {tabu_search(Imax, N, my_cities, adj_mat)}\")"
+        "    print(\"Opcion no valida\")\n",
+        "    \n",
+        "  # ------------------------------------------PARTE 2\n",
+        "  #1. Mejor soluci ́on encontrada considerando las M ejecuciones.\n",
+        "  #2. Peor soluci ́on encontrada considerando las M ejecuciones.\n",
+        "  #3. Soluci ́on que corresponde a la mediana considerando las M ejecuciones.\n",
+        "  #4. Media del valor de la funci ́on objetivo considerando las M ejecuciones.\n",
+        "  #5. Desviaci ́on est ́andar del valor de la funci ́on objetivo considerando las M ejecuciones.\n",
+        "\n",
+        "  solutions = []\n",
+        "  media = 0\n",
+        "  stdesv = []\n",
+        "  conteo = 0\n",
+        "  #En los primeros tres puntos indica tanto el valor de x (lista de objetos y su\n",
+        "  #correspondiente cadena binaria) como el valor de las funciones f (valor de la mochila) y g (peso de la mochila).\n",
+        "  while conteo != M:\n",
+        "    objects_in_bag, binary, bag_value, bag_weight = RS(temp_initial, temp_end, bag_capacity, value_objects, weight_objects)\n",
+        "    element = (objects_in_bag, binary, bag_value, bag_weight)\n",
+        "     \n",
+        "    media += bag_value\n",
+        "    stdesv.append(bag_value)\n",
+        "      \n",
+        "    solutions.append(element)\n",
+        "    conteo += 1\n",
+        "    \n",
+        "  # Ordenamos de manera ascendente en base al costo de recorrido de la solución\n",
+        "  solutions = sorted(solutions, key=lambda value: value[2]) \n",
+        "  #print(solutions)\n",
+        "  #print(f\"Mejor solución: {min(solutions)} \")#{better_way}, {better_weight}\")\n",
+        "  print(f\"\\nMejor solución: {solutions[-1]}\")\n",
+        "  #print(f\"Peor solución: {max(solutions)}\")#{poor_way}, {poor_weight}\")\n",
+        "  print(f\"Peor solución: {solutions[0]}\")\n",
+        "  # Se supone que cuando es un número impar, se hace un promedio de los dos \n",
+        "  # del centro pero ¿cóómo haces eso con listas? .-. \n",
+        "  # Es por ello que lo he puesto así\n",
+        "  print(f\"Mediana ejecuciones: {solutions[int(len(solutions)/2)]}\")\n",
+        "  #print(f\"Media: {media/len(solutions)}\")\n",
+        "  print(f\"Media: {media/M}\")\n",
+        "  print(f\"Desviación estandar: {std(stdesv)}\")\n",
+        "  "
       ],
-      "execution_count": 53,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -760,7 +761,7 @@
             "2. Input desde archivo de texto\n",
             "2\n",
             "Nombre del archivo: input.txt\n",
-            "Número de ejecuciones: 100\n",
+            "Número de ejecuciones: 10\n",
             "\n",
             "Mejor solución: ([1, 4], [0, 1, 0, 0, 1], 37, 13)\n",
             "Peor solución: ([1, 4], [0, 1, 0, 0, 1], 37, 13)\n",
