--- a/PE/ECProgramacionEvolutiva.ipynb
+++ b/PE/ECProgramacionEvolutiva.ipynb
@@ -43,7 +43,7 @@
         "from numpy import std\n",
         "from random import randint"
       ],
-      "execution_count": 15,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -281,7 +281,7 @@
         "  # Creamos el nuevo Individuo y lo devolvemos\n",
         "  return [np.concatenate((mutation_x, mutation_sigma)), fitness(mutation_x, n)]"
       ],
-      "execution_count": 21,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -470,10 +470,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d939f316-23c4-4763-c1b0-9ee5ee30414c"
+        "outputId": "74a157af-8a62-4704-cf94-0d073dc99a6d"
       },
       "source": [
-        "if __name__ == \"__main__\":\n",
+        " if __name__ == \"__main__\":\n",
         " \n",
         "  #file_name = str(input(\"Nombre del archivo: \"))\n",
         "  #num_variables, poblation_size, generations_number, alpha, epsilon = get_data_by_txt(file_name)\n",
@@ -515,6 +515,7 @@
         "    conteo += 1  \n",
         "\n",
         "     \n",
+        "  \n",
         "  my_f_sol = [x[-1] for x in solutions] # fitness/ la evaluación de las x en la funcióón objetivo\n",
         "  \n",
         "    \n",
@@ -536,32 +537,40 @@
         "  print(\"DESVIACION ESTANDAR DE LAS FITNESS\\n\", np.std(my_f_sol))\n",
         "\n"
       ],
-      "execution_count": 25,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "1) Datos a mano\n",
             "2) Datos por txt\n",
-            "Introduce un número: 2\n",
-            "Número de ejecuciones: 100\n",
+            "Introduce un número: 1\n",
+            "Número de variables: 10\n",
+            "Número de ejecuciones: 1000\n",
             "\n",
             "MEJOR SOLUCION\n",
-            " X's: [8.46482836e-08 7.65312690e-08]\n",
-            "Sigmas: [0.00025323 0.0001    ]\n",
-            "f(x): 0.0\n",
+            " X's: [ 0.0045152   0.00075988  0.00475325 -0.00038708 -0.02435038  0.00024418\n",
+            " -0.0183235   0.02604997  0.01117783 -0.02369965]\n",
+            "Sigmas: [0.0116969  0.0001     0.0001     0.0001     0.00415816 0.0001\n",
+            " 0.01087061 0.0001     0.0001     0.0001    ]\n",
+            "f(x): 0.074\n",
             "PEOR SOLUCION\n",
-            " X's: [-1.49147451e-06  1.95891788e+00]\n",
-            "Sigmas: [0.0001 0.0001]\n",
-            "f(x): 4.884\n",
+            " X's: [ 6.99598738  6.99465073 -1.99849188  1.99743612  3.99772355  9.99308595\n",
+            " 16.98918002  0.99936624 17.98892801  0.99975293]\n",
+            "Sigmas: [0.0001     0.0001     0.0001     0.00022641 0.00032319 0.0001\n",
+            " 0.0001     0.00023391 0.00012132 0.0001    ]\n",
+            "f(x): 16.789\n",
             "MEDIANA\n",
-            " X's: [ 1.50845894e-06 -8.79297233e-07]\n",
-            "Sigmas: [0.0001 0.0001]\n",
-            "f(x): 0.0\n",
+            " X's: [ 9.68096361e-01  9.95061737e-01 -7.96135980e-03  2.14445692e-03\n",
+            "  9.89147263e-01  9.99871351e-01  9.87932166e-01  9.90790922e-01\n",
+            "  2.98374097e+00  4.93476350e+00]\n",
+            "Sigmas: [0.00020917 0.00182665 0.0001     0.00324803 0.00577215 0.00010158\n",
+            " 0.0001     0.01416165 0.00024469 0.0001    ]\n",
+            "f(x): 6.566\n",
             "MEDIA DE LAS FITNESS\n",
-            " 0.3656234010389315\n",
+            " 7.124412664578651\n",
             "DESVIACION ESTANDAR DE LAS FITNESS\n",
-            " 1.0345099408891367\n"
+            " 3.8598447151497894\n"
           ],
           "name": "stdout"
         }
@@ -576,10 +585,146 @@
         "# **Resultados**\n",
         "\n",
         "## n = 5\n",
+        "> Número de ejecuciones = 100\n",
+        "```\n",
+        "MEJOR SOLUCION\n",
+        " X's: [-1.62036010e-05 -1.71289378e-05  1.41171710e-05 -7.67381288e-06\n",
+        "  1.49993736e-05]\n",
+        "Sigmas: [0.00013667 0.00032539 0.0001     0.0001     0.00017973]\n",
+        "f(x): 0.0\n",
+        "PEOR SOLUCION\n",
+        " X's: [ 1.09741526e+01  4.98827068e+00  9.97641185e-01 -2.09526719e-05\n",
+        " -4.05536850e-05]\n",
+        "Sigmas: [0.00011253 0.00011383 0.0001     0.00025668 0.00030095]\n",
+        "f(x): 13.23\n",
+        "MEDIANA\n",
+        " X's: [ 1.79453613e-05  9.45352089e-01  2.88086745e-05 -1.11987066e-05\n",
+        "  9.45412382e-01]\n",
+        "Sigmas: [0.0001     0.0001     0.00014842 0.00022322 0.00010381]\n",
+        "f(x): 2.317\n",
+        "MEDIA DE LAS FITNESS\n",
+        " 2.893811578715165\n",
+        "DESVIACION ESTANDAR DE LAS FITNESS\n",
+        " 3.112272436973118\n",
+        "```\n",
+        "\n",
+        "\n",
         "\n",
         "## n = 10 \n",
+        "> Número de ejecuciones = 100\n",
+        "\n",
+        "```\n",
+        "MEJOR SOLUCION\n",
+        " X's: [ 0.00307628  0.07154816 -0.02416617  0.12001407  0.08271466 -0.01984347\n",
+        "  0.04526667  0.06972563 -0.01238512 -0.02548058]\n",
+        "Sigmas: [1.00000000e-04 1.22149373e-01 2.83086969e-04 2.11376405e-04\n",
+        " 2.44904838e-04 4.61229174e-04 1.00000000e-04 1.00000000e-04\n",
+        " 1.00000000e-04 1.00000000e-04]\n",
+        "f(x): 0.412\n",
+        "PEOR SOLUCION\n",
+        " X's: [12.9891006  -0.9992072   1.99834784  4.99599988  4.99599019  0.99896934\n",
+        "  4.99582709 11.99002795  4.99593678 16.98593202]\n",
+        "Sigmas: [0.00012535 0.0001     0.00010493 0.0001     0.0001     0.00032409\n",
+        " 0.0001     0.0001     0.00027115 0.0001    ]\n",
+        "f(x): 16.281\n",
+        "MEDIANA\n",
+        " X's: [ 1.0133202   5.96695473  0.08086425  1.01140741 -0.97054949  1.01580088\n",
+        " -1.04552821  0.03537899 -2.10692036 -1.00289257]\n",
+        "Sigmas: [8.98058808e+00 1.97075710e-04 1.00000000e-04 1.00000000e-04\n",
+        " 1.46333192e-03 1.00000000e-04 2.65729406e-02 3.19947182e-04\n",
+        " 1.00000000e-04 3.46447012e-04]\n",
+        "f(x): 7.109\n",
+        "MEDIA DE LAS FITNESS\n",
+        " 7.445055038682716\n",
+        "DESVIACION ESTANDAR DE LAS FITNESS\n",
+        " 3.9068061374222705\n",
+        "```\n",
+        "\n",
+        "\n",
         " \n",
-        "## n = 20"
+        "## n = 20\n",
+        "> Número de ejecuciones = 100\n",
+        "\n",
+        "```\n",
+        "MEJOR SOLUCION\n",
+        " X's: [ 0.17848684  0.86204387 -1.01863474 -1.0724038   0.95890567  4.13661845\n",
+        "  0.39789309  3.0171237   2.72138765 -0.85319077 -0.26925651 -0.99002892\n",
+        "  0.22514868  0.64495898  0.08788658 -1.07513346 -1.11902064  0.95780707\n",
+        "  0.02234067  1.02400942]\n",
+        "Sigmas: [2.77787653e-04 1.00000000e-04 1.20000224e-04 1.00000000e-04\n",
+        " 3.53358654e-04 3.29324077e-04 1.00000000e-04 1.47694548e-04\n",
+        " 4.48607012e-03 1.54648387e-04 1.00000000e-04 1.64589110e-03\n",
+        " 5.02166772e-04 1.00000000e-04 1.03327459e-04 5.26573396e-04\n",
+        " 1.75940957e-01 1.61883317e-04 2.16827288e-03 2.68533671e-04]\n",
+        "f(x): 6.129\n",
+        "PEOR SOLUCION\n",
+        " X's: [ 1.69844810e+01  1.00035978e+00 -6.00837693e+00  1.79865271e+01\n",
+        "  1.39996076e+01  9.97329973e-01  1.00378733e+00 -9.99670362e+00\n",
+        "  7.99169521e+00  3.00777612e+00  1.99339428e+00  9.99211566e+00\n",
+        "  9.95420990e-01  6.73072306e-03  1.29834270e+01 -1.99420807e+00\n",
+        "  1.29973719e+01  2.09805932e+01  1.99808499e+00  6.99663355e+00]\n",
+        "Sigmas: [0.00048505 0.00322274 0.0001     0.00025293 0.0001     0.0001\n",
+        " 0.00020839 0.00018116 0.0001     0.00018121 0.0001     0.00345614\n",
+        " 0.00012809 0.0009693  0.0001     0.0001     0.00165429 0.01894341\n",
+        " 0.000166   0.00077355]\n",
+        "f(x): 17.242\n",
+        "MEDIANA\n",
+        " X's: [ 1.71409802e-03  4.99980618e+00  8.10824783e+00  2.01222752e+00\n",
+        "  1.98286999e+00  1.96941753e+00  4.92882805e+00  1.00125457e+01\n",
+        "  1.04543773e+00  7.95362936e+00 -6.95963067e+00  2.18215178e+00\n",
+        "  9.00130432e-01  0.00000000e+00  2.00649718e+00  2.03631858e+00\n",
+        "  1.98008243e+00 -3.99073005e+00 -1.20020373e+01  3.03579056e+00]\n",
+        "Sigmas: [1.86728262e-03 1.00000000e-04 1.00000000e-04 2.76816043e-04\n",
+        " 1.00000000e-04 2.93810399e-03 2.17685902e-04 1.00000000e-04\n",
+        " 1.00000000e-04 1.00000000e-04 1.60121033e-03 1.10265797e-04\n",
+        " 1.00000000e-04 4.77007431e+01 1.00000000e-04 1.00000000e-04\n",
+        " 1.66186109e-04 1.00000000e-04 1.00000000e-04 1.00000000e-04]\n",
+        "f(x): 13.006\n",
+        "MEDIA DE LAS FITNESS\n",
+        " 13.077336391770105\n",
+        "DESVIACION ESTANDAR DE LAS FITNESS\n",
+        " 2.3057006800713062\n",
+        "```\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hlcuAsSKeD_B"
+      },
+      "source": [
+        "He realizado nuevamente la ejecución para un **número de variables** igual a **10** pero ahora para **1000 ejecuciones**, si bien tardo más de 8 minutos en completar la ejecución, no hubo mucha mejora en los resultados: \n",
+        "\n",
+        "\n",
+        "```\n",
+        "MEJOR SOLUCION\n",
+        " X's: [ 0.0045152   0.00075988  0.00475325 -0.00038708 -0.02435038  0.00024418\n",
+        " -0.0183235   0.02604997  0.01117783 -0.02369965]\n",
+        "Sigmas: [0.0116969  0.0001     0.0001     0.0001     0.00415816 0.0001\n",
+        " 0.01087061 0.0001     0.0001     0.0001    ]\n",
+        "f(x): 0.074\n",
+        "PEOR SOLUCION\n",
+        " X's: [ 6.99598738  6.99465073 -1.99849188  1.99743612  3.99772355  9.99308595\n",
+        " 16.98918002  0.99936624 17.98892801  0.99975293]\n",
+        "Sigmas: [0.0001     0.0001     0.0001     0.00022641 0.00032319 0.0001\n",
+        " 0.0001     0.00023391 0.00012132 0.0001    ]\n",
+        "f(x): 16.789\n",
+        "MEDIANA\n",
+        " X's: [ 9.68096361e-01  9.95061737e-01 -7.96135980e-03  2.14445692e-03\n",
+        "  9.89147263e-01  9.99871351e-01  9.87932166e-01  9.90790922e-01\n",
+        "  2.98374097e+00  4.93476350e+00]\n",
+        "Sigmas: [0.00020917 0.00182665 0.0001     0.00324803 0.00577215 0.00010158\n",
+        " 0.0001     0.01416165 0.00024469 0.0001    ]\n",
+        "f(x): 6.566\n",
+        "MEDIA DE LAS FITNESS\n",
+        " 7.124412664578651\n",
+        "DESVIACION ESTANDAR DE LAS FITNESS\n",
+        " 3.8598447151497894\n",
+        "```\n",
+        "\n",
+        "### NOTA\n",
+        "> En las corridas mostradas, lo único que varió fue el número de variables de decisión. \n"
       ]
     },
     {
@@ -590,7 +735,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     }
   ]
