--- a/EE/algorithms_EE.ipynb
+++ b/EE/algorithms_EE.ipynb
@@ -147,7 +147,7 @@
         "\n",
         "[X] Permitir al usuario realizar M ejecuciones del algoritmo de EE, implementado en el punto anterior, para resolver la instancia del problema de Ackley. Reportar: Mejor solución, Peor solución, La media de soluciones, desviación estandar del valor de la función objetivo\n",
         "\n",
-        "[ ] Realizar una tabla comparativa que reporte los resultados de\n",
+        "[x] Realizar una tabla comparativa que reporte los resultados de\n",
         "las tres versiones de EEs implementadas: (1 + 1)-EE, (μ,$\\lambda$)-EE y la versión propuesta. Se deben reportar los resultados para problemas con 2, 5, 7 y 10 variables."
       ],
       "id": "e44408a8"
@@ -1450,10 +1450,6 @@
         "Xs&fx: [-0.0016897703135800156, -0.0015113848830057494, -0.001775757451882999, 0.0014822654723971043, 0.002669917249006662, 0.001753149609581519, 0.00021638853540399913, -0.0006085943719727511, 0.0001282185673733577] & 0.018763338761734704\n",
         "\n",
         "# ALGORITMO (mu, lambda)-EE con modificaciones implementadas\n",
-        "---\n",
-        "En este caso he usado 100 ejecuciones, dado que el tiempo mejoro un poco.\n",
-        "Con 5000 se detuvo a los 16 minutos más o menos a diferencia del anterior.\n",
-        "No es mucha mejora evidentemente.\n",
         "\n",
         "## n = 2\n",
         "\n",
@@ -1492,7 +1488,7 @@
         "Xs&fx: [-1.6994488066475821, -1.6984491923289482, -0.398483036213164, 1.4979317807581385, -0.1997073087455182, -0.29671741469677926, 1.3980132590082726, 1.796938309170787, -1.399356606663876] & 3.525860155614563\n",
         "\n",
         "\n",
-        "Según parece, todos los algoritmos convergen mucho más rápido a menor número de variables."
+        "Según parece, todos los algoritmos convergen mucho más rápido a menor número de variables pero el número de ejecuciones juega un papel importante también."
       ],
       "id": "kfh5SViMTTEZ"
     }
