Actualización de texto - Terminado 100 %

--- a/EE/algorithms_EE.ipynb
+++ b/EE/algorithms_EE.ipynb
@@ -180,7 +180,7 @@
         "from random import randint"
       ],
       "id": "c9439e98",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -212,7 +212,7 @@
         "  return (-20 * exp(-0.2*sqrt(sumatoria1)) - exp(sumatoria2) + 20 + e)"
       ],
       "id": "5ddba1b0",
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -230,7 +230,7 @@
         "  return -f(x, n)"
       ],
       "id": "50e30150",
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -299,8 +299,6 @@
         "        population.append(guy)\n",
         "      \n",
         "      # Regresamos la población generada\n",
-        "      # Arreglo de arreglos, donde un indice corresponde a un individuo formado como: \n",
-        "      # mitad variables del problema, mitad variables de mutación y fitness\n",
         "      return population\n",
         "    \n",
         "    else:\n",
@@ -316,7 +314,7 @@
         "    "
       ],
       "id": "511ab603",
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -365,7 +363,7 @@
         "    return [[guy, guy_fitness]][0][0]"
       ],
       "id": "585e2ced",
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -422,7 +420,7 @@
         "        "
       ],
       "id": "64bc3a88",
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -434,7 +432,7 @@
         "#!pip install python-dotenv"
       ],
       "id": "2WdssLNSpmgx",
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -514,7 +512,7 @@
         "    "
       ],
       "id": "XBGP9jXLpjiO",
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -552,7 +550,9 @@
         "# Implementación: ($\\mu$, $\\lambda$)-EE\n",
         "---\n",
         "\n",
-        "Dado que para realizar la tabla comparativa necesito este algoritmo, he de implementarlo aquí con apoyo del manual"
+        "Dado que para realizar la tabla comparativa necesito este algoritmo, he de hacer uso del algoritmo que alguien más ya implemento en el manual de apoyo de esta clase. \n",
+        "\n",
+        "Créditos a quién corresponda <3"
       ],
       "id": "iOO__A4pYvzb"
     },
@@ -568,7 +568,7 @@
         "from random import choices"
       ],
       "id": "Wrj_umqcL41r",
-      "execution_count": 169,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -593,7 +593,7 @@
         "# y las siguiente componente corresponde al tamaño de paso para la mutación de las variables del problema\n"
       ],
       "id": "U_vUMAOGamzz",
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -621,7 +621,7 @@
         "  return -f(x)"
       ],
       "id": "Ww8b-hQte6wT",
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -657,7 +657,7 @@
         "  return population"
       ],
       "id": "0OG23nJwfj92",
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -697,7 +697,7 @@
         "  return child"
       ],
       "id": "oRV-0JkHgFSL",
-      "execution_count": 176,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -771,7 +771,7 @@
         "  return np.concatenate((mutation_x, mutation_sigma))"
       ],
       "id": "ywW9CzxEiEXl",
-      "execution_count": 178,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -798,7 +798,7 @@
         "  return [new_ind, fitness(new_ind[:n])]"
       ],
       "id": "pOY0Uw8dkNdT",
-      "execution_count": 180,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -853,7 +853,7 @@
         "  return population[0][0], -population[0][1]"
       ],
       "id": "sop5VXPOltua",
-      "execution_count": 182,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -933,7 +933,7 @@
         "  "
       ],
       "id": "kNrDkyVtnJsR",
-      "execution_count": 191,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -974,7 +974,7 @@
         "\n",
         "\n",
         "---\n",
-        "Para resolver esta parte del ejercicio voy a hacer uso de la implementación $(\\mu, \\lambda)-EE$ sin embargo voy a modificar dos partes, la __cruza__ y la __mutación__ ya que considero que son las partes fundamentales de un algoritmo basado en EEs y por lo tanto no he de crearlo desde cero sino que puedo reutilizar algunas funciones que ya hay en este documento"
+        "Para resolver esta parte del ejercicio voy a hacer uso de la implementación $(\\mu, \\lambda)-EE$ que esta en el manual sin embargo voy a modificar dos partes, la __cruza__ y la __mutación__ ya que considero que son las partes fundamentales de un algoritmo basado en EEs y por lo tanto no he de crearlo desde cero sino que puedo reutilizar algunas funciones que ya hay en este documento, como la generación de los hijos, la población y la función a evaluar en este caso. \n"
       ],
       "id": "0f71FLPJqOM8"
     },
@@ -990,7 +990,7 @@
         "from random import choices"
       ],
       "id": "d8GRbM4cRcdT",
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1018,7 +1018,7 @@
         "  return -f(x)"
       ],
       "id": "lbz8YM6No_20",
-      "execution_count": 193,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1051,7 +1051,7 @@
         "  return population"
       ],
       "id": "Cp0d6QAzDuZ4",
-      "execution_count": 194,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1094,7 +1094,7 @@
         "  return child"
       ],
       "id": "O809nuh9DzdT",
-      "execution_count": 195,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1144,7 +1144,7 @@
         "  return np.concatenate((mutation_x, mutation_sigma))"
       ],
       "id": "g9p6ga2lGScv",
-      "execution_count": 197,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1171,7 +1171,7 @@
         "  return [new_ind, fitness(new_ind[:n])]"
       ],
       "id": "TJ97cAuuGW8g",
-      "execution_count": 199,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1223,7 +1223,7 @@
         "  return population[0][0], -population[0][1]"
       ],
       "id": "LqOItKNuGdnA",
-      "execution_count": 200,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1316,7 +1316,7 @@
         "  print(f\"SD: {np.std(tmp_F)}\")  "
       ],
       "id": "Ukxw2BtTde7h",
-      "execution_count": 208,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
