Actualización de texto - Estado de la práctica: 100%

--- a/EE/algorithms_EE.ipynb
+++ b/EE/algorithms_EE.ipynb
@@ -552,7 +552,9 @@
         "\n",
         "Dado que para realizar la tabla comparativa necesito este algoritmo, he de hacer uso del algoritmo que alguien más ya implemento en el manual de apoyo de esta clase. \n",
         "\n",
-        "Créditos a quién corresponda <3"
+        "Créditos a quién corresponda. Sí la persona que llevo a cabo la implementación de este algoritmo en el manual de la clase llega a ver este notebook, contacteme, que yo le he de invitar un café ya que su implementación me ha ayudado muchisimo y me ha quedado mucho más claro como llevar a cabo la implementación de un algoritmo del tipo EEs.\n",
+        "\n",
+        "Muchas gracias"
       ],
       "id": "iOO__A4pYvzb"
     },
@@ -1250,7 +1252,7 @@
         "outputId": "a78b7971-a7e9-4b5e-cc9b-be0bff8409b2"
       },
       "source": [
-        "from dotenv import dotenv_values\n",
+        " from dotenv import dotenv_values\n",
         "if __name__==\"__main__\":\n",
         "  variables = dotenv_values(\"11-EE.txt\")\n",
         "  N = int(variables[\"plusN\"])\n",
